--- a/src/package.xml
+++ b/src/package.xml
@@ -1,45 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-	<types>
-		<members>CreateDataflowHttpCalloutMock</members>
-		<members>CsvDataImportBatch</members>
-		<members>DFJSON</members>
-		<members>DFJSON_Frontend</members>
-		<members>DFJSON_old</members>
-		<members>DataflowDefinitionEditor</members>
-		<members>DataflowEditorController</members>
-		<members>DataflowEditor_test</members>
-		<members>IMockarooHelper</members>
-		<members>MockarooHelper</members>
-		<members>MockarooHelperFactory</members>
-		<members>MockarooHttpCalloutMock</members>
-		<members>ProfileUtils</members>
-		<members>Randomizer</members>
-		<members>Randomizer_test</members>
-		<members>RestApiResponseBody</members>
-		<members>RoleUtils</members>
-		<members>SalesWaveDataflowDefinitionEditor</members>
-		<members>ServicesWaveDataflowDefinitionEditor</members>
-		<members>SmartLookup</members>
-		<members>WW_CopyCaseHistory</members>
-		<members>WW_CopyCaseHistory_test</members>
-		<members>WW_CopyHistory</members>
-		<members>WW_CopyHistoryOld</members>
-		<members>WW_CopyOpportunityFieldHistory</members>
-		<members>WW_CopyOpportunityFieldHistory_test</members>
-		<members>WW_CopyOpportunityHistory</members>
-		<members>WW_CopyOpportunityHistory_test</members>
-		<members>WaveDataGeneratorController</members>
-		<members>WaveDataGenerator_test</members>
-		<members>CopyCustomHistoryController</members>
-		<members>CopyCustomHistory_test</members>
-		<name>ApexClass</name>
-	</types>
-	<types>
-		<members>DataflowEditor</members>
-		<members>WaveDataGenerator</members>
-		<members>CopyCustomHistory</members>
-		<name>ApexPage</name>
-	</types>
-	<version>34.0</version>
+    <types>
+        <members>CopyCustomHistoryController</members>
+        <members>CopyCustomHistory_test</members>
+        <members>CreateDataflowHttpCalloutMock</members>
+        <members>CsvDataImportBatch</members>
+        <members>DFJSON</members>
+        <members>DFJSON_Frontend</members>
+        <members>DFJSON_old</members>
+        <members>DataflowDefinitionEditor</members>
+        <members>DataflowEditorController</members>
+        <members>DataflowEditor_test</members>
+        <members>IMockarooHelper</members>
+        <members>ManageQuotaDatasetsController</members>
+        <members>MockarooHelper</members>
+        <members>MockarooHelperFactory</members>
+        <members>MockarooHttpCalloutMock</members>
+        <members>ProfileUtils</members>
+        <members>Randomizer</members>
+        <members>Randomizer_test</members>
+        <members>RestApiResponseBody</members>
+        <members>RoleUtils</members>
+        <members>SalesWaveDataflowDefinitionEditor</members>
+        <members>SalesWaveQuotas</members>
+        <members>SalesWaveScripted_test</members>
+        <members>ServicesWaveDataflowDefinitionEditor</members>
+        <members>SmartLookup</members>
+        <members>WW_CopyCaseHistory</members>
+        <members>WW_CopyCaseHistory_test</members>
+        <members>WW_CopyHistory</members>
+        <members>WW_CopyHistoryOld</members>
+        <members>WW_CopyOpportunityFieldHistory</members>
+        <members>WW_CopyOpportunityFieldHistory_test</members>
+        <members>WW_CopyOpportunityHistory</members>
+        <members>WW_CopyOpportunityHistory_test</members>
+        <members>WaveDataGeneratorController</members>
+        <members>WaveDataGenerator_test</members>
+        <name>ApexClass</name>
+    </types>
+    <types>
+        <members>CopyCustomHistory</members>
+        <members>DataflowEditor</members>
+        <members>ManageQuotaDatasets</members>
+        <members>WaveDataGenerator</members>
+        <name>ApexPage</name>
+    </types>
+    <version>34.0</version>
 </Package>
