Added Wave Assets Utility tools.

--- a/src/package.xml
+++ b/src/package.xml
@@ -1,48 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-	<types>
-		<members>CopyCustomHistoryController</members>
-		<members>CopyCustomHistory_test</members>
-		<members>CreateDataflowHttpCalloutMock</members>
-		<members>CsvDataImportBatch</members>
-		<members>DataflowDefinitionEditor</members>
-		<members>DataflowEditorController</members>
-		<members>DataflowEditor_test</members>
-		<members>IMockarooHelper</members>
-		<members>ManageQuotaDatasetsController</members>
-		<members>MockarooHelper</members>
-		<members>MockarooHelperFactory</members>
-		<members>MockarooHttpCalloutMock</members>
-		<members>ProfileUtils</members>
-		<members>Randomizer</members>
-		<members>Randomizer_test</members>
-		<members>RestApiResponseBody</members>
-		<members>RoleUtils</members>
-		<members>SalesWaveDataflowDefinitionEditor</members>
-		<members>SalesWaveQuotas</members>
-		<members>SalesWaveScripted_test</members>
-		<members>ServicesWaveDataflowDefinitionEditor</members>
-		<members>SmartLookup</members>
-		<members>WW_CopyCaseHistory</members>
-		<members>WW_CopyCaseHistory_test</members>
-		<members>WW_CopyHistory</members>
-		<members>WW_CopyOpportunityFieldHistory</members>
-		<members>WW_CopyOpportunityFieldHistory_test</members>
-		<members>WW_CopyOpportunityHistory</members>
-		<members>WW_CopyOpportunityHistory_test</members>
-		<members>WaveDataGeneratorController</members>
-		<members>WaveDataGenerator_test</members>
-		<members>WaveFoldersResponse</members>
-		<members>WaveFolder</members>
-		<members>WaveFolderRestApiHttpCalloutMock</members>
-		<name>ApexClass</name>
-	</types>
-	<types>
-		<members>CopyCustomHistory</members>
-		<members>DataflowEditor</members>
-		<members>ManageQuotaDatasets</members>
-		<members>WaveDataGenerator</members>
-		<name>ApexPage</name>
-	</types>
-	<version>38.0</version>
+    <types>
+        <members>CopyCustomHistoryController</members>
+        <members>CopyCustomHistory_test</members>
+        <members>CreateDataflowHttpCalloutMock</members>
+        <members>CsvDataImportBatch</members>
+        <members>DataflowDefinitionEditor</members>
+        <members>DataflowEditorController</members>
+        <members>DataflowEditor_test</members>
+        <members>IMockarooHelper</members>
+        <members>ManageQuotaDatasetsController</members>
+        <members>MockarooHelper</members>
+        <members>MockarooHelperFactory</members>
+        <members>MockarooHttpCalloutMock</members>
+        <members>ProfileUtils</members>
+        <members>Randomizer</members>
+        <members>Randomizer_test</members>
+        <members>RestApiResponseBody</members>
+        <members>RoleUtils</members>
+        <members>SalesWaveDataflowDefinitionEditor</members>
+        <members>SalesWaveQuotas</members>
+        <members>SalesWaveScripted_test</members>
+        <members>ServicesWaveDataflowDefinitionEditor</members>
+        <members>SmartLookup</members>
+        <members>WW_CopyCaseHistory</members>
+        <members>WW_CopyCaseHistory_test</members>
+        <members>WW_CopyHistory</members>
+        <members>WW_CopyOpportunityFieldHistory</members>
+        <members>WW_CopyOpportunityFieldHistory_test</members>
+        <members>WW_CopyOpportunityHistory</members>
+        <members>WW_CopyOpportunityHistory_test</members>
+        <members>WaveAssetsUtility</members>
+        <members>WaveDashboard</members>
+        <members>WaveDashboardsResponse</members>
+        <members>WaveDataGeneratorController</members>
+        <members>WaveDataGenerator_test</members>
+        <members>WaveDataset</members>
+        <members>WaveDatasetsResponse</members>
+        <members>WaveFolder</members>
+        <members>WaveFolderRestApiHttpCalloutMock</members>
+        <members>WaveFoldersResponse</members>
+        <members>WaveLens</members>
+        <members>WaveLensesResponse</members>
+        <members>WaveRestApiUtils</members>
+        <name>ApexClass</name>
+    </types>
+    <types>
+        <members>CopyCustomHistory</members>
+        <members>DataflowEditor</members>
+        <members>ManageQuotaDatasets</members>
+        <members>WaveDataGenerator</members>
+        <name>ApexPage</name>
+    </types>
+    <version>38.0</version>
 </Package>
