--- a/src/package.xml
+++ b/src/package.xml
@@ -52,11 +52,11 @@
 		<members>WaveDataManagerController</members>
 		<members>WaveMetadata</members>
 		<members>WaveMetadataApplication</members>
-		<members>WaveMetadataApplicationForSales</members>
 		<members>WaveMetadataApplicationObject</members>
 		<members>WaveDataUtils</members>
 		<members>SObjectTransference</members>
 		<members>WaveDataCleaner</members>
+		<members>WaveApplicationObject</members>
 		<name>ApexClass</name>
 	</types>
 	<types>
