Finished ObjLoader, only rest the relationships

--- a/src/package.xml
+++ b/src/package.xml
@@ -57,6 +57,7 @@
 		<members>SObjectTransference</members>
 		<members>WaveDataCleaner</members>
 		<members>WaveApplicationObject</members>
+		<members>WaveObjectRelation</members>
 		<name>ApexClass</name>
 	</types>
 	<types>
