Almost finished the Smart Lookups with relations metadata.

--- a/src/package.xml
+++ b/src/package.xml
@@ -58,6 +58,8 @@
 		<members>WaveDataCleaner</members>
 		<members>WaveApplicationObject</members>
 		<members>WaveObjectRelation</members>
+		<members>WaveApplicationObjectRelation</members>
+		<members>WaveMetadataApplicationObjectRelation</members>
 		<name>ApexClass</name>
 	</types>
 	<types>
