--- a/src/package.xml
+++ b/src/package.xml
@@ -60,6 +60,7 @@
 		<members>WaveObjectRelation</members>
 		<members>WaveApplicationObjectRelation</members>
 		<members>WaveMetadataApplicationObjectRelation</members>
+		<members>WaveApplicationObjectField</members>
 		<name>ApexClass</name>
 	</types>
 	<types>
