--- a/src/package.xml
+++ b/src/package.xml
@@ -5,23 +5,30 @@
         <members>CsvDataImportBatch</members>
         <members>Edgemart</members>
         <members>IMockarooHelper</members>
+        <members>ManageQuotaDatasetsController</members>
         <members>MetadataService</members>
         <members>MetadataServiceTest</members>
         <members>MockarooHelperFactory</members>
+        <members>ProfileUtils</members>
         <members>RestApiErrorResponse</members>
         <members>RestApiFolderErrorResponse</members>
         <members>RestApiResponseBody</members>
+        <members>RoleUtils</members>
         <members>SF_MetadataUtils</members>
+        <members>SalesWaveQuotas</members>
         <members>SmartLookup</members>
         <members>Utility_RowIterator</members>
         <members>WaveApplicationObject</members>
         <members>WaveApplicationObjectField</members>
         <members>WaveApplicationObjectRelation</members>
         <members>WaveApplicationRow</members>
+        <members>WaveAsset</members>
         <members>WaveConfiguratorException</members>
         <members>WaveConfiguratorUtils</members>
         <members>WaveConfiguratorUtils_test</members>
         <members>WaveCsvDataRetriever</members>
+        <members>WaveDashboard</members>
+        <members>WaveDashboardsResponse</members>
         <members>WaveDataManagerController</members>
         <members>WaveDataManager_test</members>
         <members>WaveMetadata</members>
@@ -32,6 +39,7 @@
         <name>ApexClass</name>
     </types>
     <types>
+        <members>ManageQuotaDatasets</members>
         <members>WaveDataManager</members>
         <name>ApexPage</name>
     </types>
