--- a/src/package.xml
+++ b/src/package.xml
@@ -1,50 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-	<types>
-		<members>CSVReader</members>
-		<members>CsvDataImportBatch</members>
-		<members>Edgemart</members>
-		<members>IMockarooHelper</members>
-		<members>ManageQuotaDatasetsController</members>
-		<members>MetadataService</members>
-		<members>MetadataServiceTest</members>
-		<members>MockarooHelperFactory</members>
-		<members>ProfileUtils</members>
-		<members>RestApiErrorResponse</members>
-		<members>RestApiFolderErrorResponse</members>
-		<members>RestApiResponseBody</members>
-		<members>RoleUtils</members>
-		<members>SF_MetadataUtils</members>
-		<members>SalesWaveQuotas</members>
-		<members>SmartLookup</members>
-		<members>Utility_RowIterator</members>
-		<members>WaveApplicationObject</members>
-		<members>WaveApplicationObjectField</members>
-		<members>WaveApplicationObjectRelation</members>
-		<members>WaveApplicationRow</members>
-		<members>WaveAsset</members>
-		<members>WaveConfiguratorException</members>
-		<members>WaveConfiguratorUtils</members>
-		<members>WaveConfiguratorUtils_test</members>
-		<members>WaveCsvDataRetriever</members>
-		<members>WaveDashboard</members>
-		<members>WaveDashboardsResponse</members>
-		<members>WaveDataManagerController</members>
-		<members>WaveDataManager_test</members>
-		<members>WaveDataset</members>
-		<members>WaveDatasetsResponse</members>
-		<members>WaveMetadata</members>
-		<members>WaveMetadataApplication</members>
-		<members>WaveMetadataApplicationObject</members>
-		<members>WaveMetadataApplicationObjectRelation</members>
-		<members>WaveObjectRelation</members>
-		<members>WaveMetadataApplicationDashboard</members>
-		<name>ApexClass</name>
-	</types>
-	<types>
-		<members>ManageQuotaDatasets</members>
-		<members>WaveDataManager</members>
-		<name>ApexPage</name>
-	</types>
-	<version>38.0</version>
+    <types>
+        <members>CSVReader</members>
+        <members>CsvDataImportBatch</members>
+        <members>Edgemart</members>
+        <members>IMockarooHelper</members>
+        <members>MetadataService</members>
+        <members>MetadataServiceTest</members>
+        <members>MockarooHelperFactory</members>
+        <members>RestApiErrorResponse</members>
+        <members>RestApiFolderErrorResponse</members>
+        <members>RestApiResponseBody</members>
+        <members>SF_MetadataUtils</members>
+        <members>SmartLookup</members>
+        <members>TimeShiftingBatch</members>
+        <members>Utility_RowIterator</members>
+        <members>WaveApplicationObject</members>
+        <members>WaveApplicationObjectField</members>
+        <members>WaveApplicationObjectRelation</members>
+        <members>WaveApplicationRow</members>
+        <members>WaveAsset</members>
+        <members>WaveConfiguratorException</members>
+        <members>WaveConfiguratorUtils</members>
+        <members>WaveCsvDataRetriever</members>
+        <members>WaveDataManagerController</members>
+        <members>WaveDataManager_test</members>
+        <members>WaveDataset</members>
+        <members>WaveDatasetsResponse</members>
+        <members>WaveMetadata</members>
+        <members>WaveMetadataApplication</members>
+        <members>WaveMetadataApplicationDashboard</members>
+        <members>WaveMetadataApplicationObject</members>
+        <members>WaveMetadataApplicationObjectRelation</members>
+        <members>WaveTimeShiftingItem</members>
+        <name>ApexClass</name>
+    </types>
+    <types>
+        <members>WaveDataManager</members>
+        <name>ApexPage</name>
+    </types>
+    <version>39.0</version>
 </Package>
