--- a/src/package.xml
+++ b/src/package.xml
@@ -19,6 +19,7 @@
         <members>SF_MetadataUtils</members>
         <members>SmartLookup</members>
         <members>TimeShiftingBatch</members>
+        <members>UploadUserPhotoQueueable</members>
         <members>Utility_RowIterator</members>
         <members>WaveApplicationObject</members>
         <members>WaveApplicationObjectField</members>
