--- a/src/package.xml
+++ b/src/package.xml
@@ -2,6 +2,7 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
         <members>CSVReader</members>
+        <members>CheckTimeShiftingQueue</members>
         <members>CreateObjectsAndFieldsQueueable</members>
         <members>CreateRecordTypesQueueable</members>
         <members>CsvDataImportBatch</members>
@@ -17,6 +18,7 @@
         <members>RestApiFolderErrorResponse</members>
         <members>RestApiResponseBody</members>
         <members>SF_MetadataUtils</members>
+        <members>ScheduledTimeShifting</members>
         <members>SmartLookup</members>
         <members>TimeShiftingBatch</members>
         <members>UploadUserPhotoQueueable</members>
@@ -38,6 +40,7 @@
         <members>WaveMetadataApplicationDashboard</members>
         <members>WaveMetadataApplicationObject</members>
         <members>WaveMetadataApplicationObjectRelation</members>
+        <members>WaveMetadataApplicationRecordType</members>
         <members>WaveRecordTypeItem</members>
         <members>WaveTimeShiftingItem</members>
         <members>Zippex</members>
@@ -46,6 +49,7 @@
     </types>
     <types>
         <members>WaveDataManager</members>
+        <members>WaveDataManagerSLDS</members>
         <name>ApexPage</name>
     </types>
     <version>39.0</version>
