Added Triggers/Workflows/Rules alert functionality

--- a/src/package.xml
+++ b/src/package.xml
@@ -1,57 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <types>
-        <members>AnalyticsDemoFAQ</members>
-        <members>CSVReader</members>
-        <members>CheckTimeShiftingQueue</members>
-        <members>CreateObjectsAndFieldsQueueable</members>
-        <members>CreateRecordTypesQueueable</members>
-        <members>CsvDataImportBatch</members>
-        <members>Edgemart</members>
-        <members>GenericAppConfiguration</members>
-        <members>HexUtil</members>
-        <members>IMockarooHelper</members>
-        <members>MetadataService</members>
-        <members>MetadataServiceTest</members>
-        <members>MockarooHelperFactory</members>
-        <members>Puff</members>
-        <members>RestApiErrorResponse</members>
-        <members>RestApiFolderErrorResponse</members>
-        <members>RestApiResponseBody</members>
-        <members>SF_MetadataUtils</members>
-        <members>ScheduledTimeShifting</members>
-        <members>SmartLookup</members>
-        <members>TimeShiftingBatch</members>
-        <members>UploadUserPhotoQueueable</members>
-        <members>Utility_RowIterator</members>
-        <members>WaveApplicationObject</members>
-        <members>WaveApplicationObjectField</members>
-        <members>WaveApplicationObjectRelation</members>
-        <members>WaveApplicationRow</members>
-        <members>WaveAsset</members>
-        <members>WaveConfiguratorException</members>
-        <members>WaveConfiguratorUtils</members>
-        <members>WaveCsvDataRetriever</members>
-        <members>WaveDataManagerController</members>
-        <members>WaveDataManager_test</members>
-        <members>WaveDataset</members>
-        <members>WaveDatasetsResponse</members>
-        <members>WaveMetadata</members>
-        <members>WaveMetadataApplication</members>
-        <members>WaveMetadataApplicationDashboard</members>
-        <members>WaveMetadataApplicationObject</members>
-        <members>WaveMetadataApplicationObjectRelation</members>
-        <members>WaveMetadataApplicationRecordType</members>
-        <members>WaveRecordTypeItem</members>
-        <members>WaveTimeShiftingItem</members>
-        <members>Zippex</members>
-        <members>ZippexTests</members>
-        <name>ApexClass</name>
-    </types>
-    <types>
-        <members>WaveDataManager</members>
-        <members>WaveDataManagerSLDS</members>
-        <name>ApexPage</name>
-    </types>
-    <version>40.0</version>
+	<types>
+		<members>AnalyticsDemoFAQ</members>
+		<members>CSVReader</members>
+		<members>CheckTimeShiftingQueue</members>
+		<members>CreateObjectsAndFieldsQueueable</members>
+		<members>CreateRecordTypesQueueable</members>
+		<members>CsvDataImportBatch</members>
+		<members>Edgemart</members>
+		<members>GenericAppConfiguration</members>
+		<members>HexUtil</members>
+		<members>IMockarooHelper</members>
+		<members>MetadataService</members>
+		<members>MetadataServiceTest</members>
+		<members>MockarooHelperFactory</members>
+		<members>Puff</members>
+		<members>RestApiErrorResponse</members>
+		<members>RestApiFolderErrorResponse</members>
+		<members>RestApiResponseBody</members>
+		<members>SF_MetadataUtils</members>
+		<members>ScheduledTimeShifting</members>
+		<members>SmartLookup</members>
+		<members>TimeShiftingBatch</members>
+		<members>UploadUserPhotoQueueable</members>
+		<members>Utility_RowIterator</members>
+		<members>WaveApplicationObject</members>
+		<members>WaveApplicationObjectField</members>
+		<members>WaveApplicationObjectRelation</members>
+		<members>WaveApplicationRow</members>
+		<members>WaveAsset</members>
+		<members>WaveConfiguratorException</members>
+		<members>WaveConfiguratorUtils</members>
+		<members>WaveCsvDataRetriever</members>
+		<members>WaveDataManagerController</members>
+		<members>WaveDataManager_test</members>
+		<members>WaveDataset</members>
+		<members>WaveDatasetsResponse</members>
+		<members>WaveMetadata</members>
+		<members>WaveMetadataApplication</members>
+		<members>WaveMetadataApplicationDashboard</members>
+		<members>WaveMetadataApplicationObject</members>
+		<members>WaveMetadataApplicationObjectRelation</members>
+		<members>WaveMetadataApplicationRecordType</members>
+		<members>WaveRecordTypeItem</members>
+		<members>WaveTimeShiftingItem</members>
+		<members>Zippex</members>
+		<members>ZippexTests</members>
+		<members>CustomModalConfirmation</members>
+		<name>ApexClass</name>
+	</types>
+	<types>
+		<members>WaveDataManager</members>
+		<members>WaveDataManagerSLDS</members>
+		<name>ApexPage</name>
+	</types>
+	<version>40.0</version>
 </Package>
