Formula fields and time shifting configuration
Now the tool supports formula fields by adding the expression in a column named 'formula' and the way that time shifting calculates the days to shift was parameterized through the metadata JSON file.

--- a/src/package.xml
+++ b/src/package.xml
@@ -19,6 +19,7 @@
         <members>SF_MetadataUtils</members>
         <members>ScheduledTimeShifting</members>
         <members>SmartLookup</members>
+        <members>TimeShiftSettings</members>
         <members>TimeShiftingBatch</members>
         <members>UploadUserPhotoQueueable</members>
         <members>Utility_RowIterator</members>
