Settings almost done to migrate to DX

--- a/analytics-demo-data-loader/.forceignore
+++ b/analytics-demo-data-loader/.forceignore
@@ -4,3 +4,6 @@
 
 package.xml
 Opportunity__hd
+Admin.profile
+PT1_profilePasswordPolicy1542126798442.profilePasswordPolicy
+PT1_profileSessionSetting1542126798537.profileSessionSetting
