--- a/force-app/main/default/staticresources/SimpleAppJson.json
+++ b/force-app/main/default/staticresources/SimpleAppJson.json
@@ -22,6 +22,18 @@
 					"targetSObject" : "Profile",
 					"targetSObjectLookupField" : "Name",
 					"foreignKeyField" : "ProfileId"
+				},
+				{
+					"csvColumnName": "",
+					"targetSObject" : "UserRole",
+					"targetSObjectLookupField" : "",
+					"foreignKeyField" : "UserRoleId",
+					"compositeForeignKey": [
+						{
+							"csvColumnName": "Role.DeveloperName",
+							"targetSObjectLookupField" : "DeveloperName"
+						}
+					] 
 				}
 			]
 		},
@@ -49,16 +61,10 @@
 			"metadataUrl": "simple/Opportunity_metadata.csv",
 			"relations": [
 				{
-					"csvColumnName": "",
+					"csvColumnName": "Owner.External_Id__c",
 					"targetSObject" : "User",
-					"targetSObjectLookupField" : "",
-					"foreignKeyField" : "OwnerId",
-					"compositeForeignKey" : [
-                        {
-                            "csvColumnName": "Owner.External_Id__c",
-                            "targetSObjectLookupField" : "External_Id__c"
-                        }
-                    ]
+					"targetSObjectLookupField" : "External_Id__c",
+					"foreignKeyField" : "OwnerId"
 				},
 				{
 					"csvColumnName": "Account.External_Id__c",
@@ -80,12 +86,12 @@
 			],
 			"recordTypes": [
 				{
-					"developerName": "SimpleOpportunity",
-					"label": "Simple Opportunity"
+					"developerName": "RecordTypeA",
+					"label": "Record Type A"
 				},
 				{
-					"developerName": "ChannelPartner",
-					"label": "Channel Partner"
+					"developerName": "RecordTypeB",
+					"label": "Record Type B"
 				}
 			]
 		}
