Finished XMD upload for datasets. Process of loading datasets finishes when edgemart has been updated in data manager

--- a/src/package.xml
+++ b/src/package.xml
@@ -29,10 +29,10 @@
     <members>ReplaceSfdcDigestByEdgemartsDirect</members>
     <members>ReplaceSfdcDigestByEdgemartsGeneric</members>
     <members>RestApiCompositeTreeResponse</members>
+    <members>RestApiErrorResponse</members>
     <members>RestApiFolderErrorResponse</members>
     <members>RestApiResponseBody</members>
     <members>SF_MetadataUtils</members>
-    <members>ScheduledTSDetails</members>
     <members>ScheduledTimeShifting</members>
     <members>SmartLookup</members>
     <members>TimeShiftSettings</members>
@@ -84,8 +84,6 @@
   </types>
   <types>
     <name>CustomObject</name>
-    <members>ScheduledTSDetails__ChangeEvent</members>
-    <members>ScheduledTSDetails__Tag</members>
     <members>ScheduledTSDetails__c</members>
   </types>
   <types>
