--- a/src/package.xml
+++ b/src/package.xml
@@ -74,6 +74,7 @@
     <members>AccountSchemaJson</members>
     <members>AccountsDataCSV</members>
     <members>AnalyticsDemoDataToolLogo</members>
+    <members>BlankDashboardTemplate</members>
     <members>LoadingGif</members>
     <members>OpportunitiesDataCSV</members>
     <members>OpportunityMetadataCSV</members>
