Create Complete App: Dashboard linked each other. Implemented image upload for associating in dashboards

--- a/src/package.xml
+++ b/src/package.xml
@@ -61,6 +61,7 @@
     <members>WaveMetadataApplicationDashboard</members>
     <members>WaveMetadataApplicationDataset</members>
     <members>WaveMetadataApplicationEdgemart</members>
+    <members>WaveMetadataApplicationImage</members>
     <members>WaveMetadataApplicationObject</members>
     <members>WaveMetadataApplicationObjectRelation</members>
     <members>WaveMetadataCompositeForeignKeyPart</members>
