--- a/src/package.xml
+++ b/src/package.xml
@@ -75,6 +75,7 @@
     <members>AccountSchemaJson</members>
     <members>AccountsDataCSV</members>
     <members>AnalyticsDemoDataToolLogo</members>
+    <members>AnalyticsFAQDemo</members>
     <members>BlankDashboardTemplate</members>
     <members>LoadingGif</members>
     <members>OpportunitiesDataCSV</members>
@@ -96,6 +97,7 @@
   </types>
   <types>
     <name>CustomApplication</name>
+    <members>AnalyticsDemoDataTool_Lightning</members>
     <members>AnalyticsDemoDataTool</members>
   </types>
   <types>
@@ -105,6 +107,10 @@
   <types>
     <name>CustomTab</name>
     <members>AnalyticsDemoDataTool</members>
+  </types>
+  <types>
+    <name>ContentAsset</name>
+    <members>AnalyticsDemoDataTool_Lightning_Logo</members>
   </types>
   <version>45.0</version>
 </Package>
