--- a/src/package.xml
+++ b/src/package.xml
@@ -97,6 +97,7 @@
   <types>
     <name>Document</name>
     <members>App_Logos</members>
+    <members>App_Logos/applications</members>
     <members>App_Logos/Analytics_Demo_Data_Tool_Logo.png</members>
   </types>
   <types>
