--- a/src/package.xml
+++ b/src/package.xml
@@ -97,7 +97,6 @@
   <types>
     <name>Document</name>
     <members>App_Logos</members>
-    <members>App_Logos/applications</members>
     <members>App_Logos/Analytics_Demo_Data_Tool_Logo.png</members>
   </types>
   <types>
@@ -116,6 +115,7 @@
   <types>
     <name>ContentAsset</name>
     <members>AnalyticsDemoDataTool_Lightning_Logo</members>
+    <members>AnalyticsDemoDataTool_Logo</members>
   </types>
   <version>48.0</version>
 </Package>
