--- a/src/package.xml
+++ b/src/package.xml
@@ -101,6 +101,7 @@
   </types>
   <types>
     <name>CustomApplication</name>
+    <members>AnalyticsDemoDataTool</members>
     <members>AnalyticsDemoDataTool_Lightning</members>
   </types>
   <types>
@@ -113,6 +114,7 @@
   </types>
   <types>
     <name>ContentAsset</name>
+    <members>AnalyticsDemoDataTool_Logo</members>
     <members>AnalyticsDemoDataTool_Lightning_Logo</members>
   </types>
   <version>48.0</version>
