--- a/src/package.xml
+++ b/src/package.xml
@@ -96,7 +96,8 @@
   </types>
   <types>
     <name>Document</name>
-    <members>Analytics_Demo_Data_Tool_Logo.png</members>
+    <members>App_Logos</members>
+    <members>App_Logos/Analytics_Demo_Data_Tool_Logo.png</members>
   </types>
   <types>
     <name>CustomApplication</name>
